Added search functionality

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -9,11 +9,11 @@
 
   &__form {
     &__input {
-      margin: 0 $spacing-01 0rem $spacing-01;
+      margin: 0 $spacing-01;
     }
 
     &__button {
-      margin: 0 $spacing-01 0rem $spacing-01;
+      margin: 0 $spacing-01;
     }
   }
 }
