--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -13,6 +13,14 @@
       height: auto;
       width: 30%;
       object-fit: cover;
+
+      @media (max-width: $screen-md) {
+        width: 45%;
+      }
+
+      @media (max-width: $screen-sm) {
+        width: 90%;
+      }
     }
   }
 }
